{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 3485,
  "lineage": "98a1cf5f-6513-307d-7443-8f4bfca46c5f",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:710271940761:loadbalancer/app/main-alb/cdd4b18ada6b096a",
            "arn_suffix": "app/main-alb/cdd4b18ada6b096a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "main-alb-1227448226.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:710271940761:loadbalancer/app/main-alb/cdd4b18ada6b096a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "main-alb",
            "preserve_host_header": false,
            "region": "eu-west-1",
            "security_groups": [
              "sg-05d492151c41e00bb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a7960a5d923144f7"
              },
              {
                "subnet_id": "subnet-0ab042643a033bfd6"
              }
            ],
            "subnets": [
              "subnet-0a7960a5d923144f7",
              "subnet-0ab042643a033bfd6"
            ],
            "tags": {
              "Name": "Main-ALB"
            },
            "tags_all": {
              "Name": "Main-ALB"
            },
            "vpc_id": "vpc-069208791c9a4008e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:710271940761:loadbalancer/app/main-alb/cdd4b18ada6b096a"
          },
          "dependencies": [
            "module.compute.aws_security_group.alb_sg",
            "module.networking.aws_eip.nat_gateway_eip",
            "module.networking.aws_internet_gateway.starttech_igw",
            "module.networking.aws_nat_gateway.starttech_nat_gw",
            "module.networking.aws_route_table.private_route_table",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_route_table_association.private_subnet_1a_rt_association",
            "module.networking.aws_route_table_association.public_subnet_rt_association",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_vpc.starttech_vpc",
            "module.networking.data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:710271940761:listener/app/main-alb/cdd4b18ada6b096a/97c1102804e9484f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:710271940761:targetgroup/alb-target-group/d0be767369d1e563",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:710271940761:listener/app/main-alb/cdd4b18ada6b096a/97c1102804e9484f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:710271940761:loadbalancer/app/main-alb/cdd4b18ada6b096a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-west-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:710271940761:listener/app/main-alb/cdd4b18ada6b096a/97c1102804e9484f"
          },
          "dependencies": [
            "module.compute.aws_lb.main_alb",
            "module.compute.aws_lb_target_group.alb_tg",
            "module.compute.aws_security_group.alb_sg",
            "module.networking.aws_eip.nat_gateway_eip",
            "module.networking.aws_internet_gateway.starttech_igw",
            "module.networking.aws_nat_gateway.starttech_nat_gw",
            "module.networking.aws_route_table.private_route_table",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_route_table_association.private_subnet_1a_rt_association",
            "module.networking.aws_route_table_association.public_subnet_rt_association",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_vpc.starttech_vpc",
            "module.networking.data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:710271940761:targetgroup/alb-target-group/d0be767369d1e563",
            "arn_suffix": "targetgroup/alb-target-group/d0be767369d1e563",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:710271940761:targetgroup/alb-target-group/d0be767369d1e563",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:710271940761:loadbalancer/app/main-alb/cdd4b18ada6b096a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-069208791c9a4008e"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:710271940761:targetgroup/alb-target-group/d0be767369d1e563"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_gateway_eip",
            "module.networking.aws_internet_gateway.starttech_igw",
            "module.networking.aws_nat_gateway.starttech_nat_gw",
            "module.networking.aws_route_table.private_route_table",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_route_table_association.private_subnet_1a_rt_association",
            "module.networking.aws_route_table_association.public_subnet_rt_association",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_vpc.starttech_vpc",
            "module.networking.data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:710271940761:security-group/sg-05d492151c41e00bb",
            "description": "Allow HTTPs from Internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d492151c41e00bb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPs",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_sg",
            "name_prefix": "",
            "owner_id": "710271940761",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB_SG"
            },
            "tags_all": {
              "Name": "ALB_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-069208791c9a4008e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "710271940761",
            "id": "sg-05d492151c41e00bb",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_gateway_eip",
            "module.networking.aws_internet_gateway.starttech_igw",
            "module.networking.aws_nat_gateway.starttech_nat_gw",
            "module.networking.aws_route_table.private_route_table",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_route_table_association.private_subnet_1a_rt_association",
            "module.networking.aws_route_table_association.public_subnet_rt_association",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_vpc.starttech_vpc",
            "module.networking.data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:710271940761:security-group/sg-05513314ed0f4d722",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05513314ed0f4d722",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fe8c9f869a844693"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "redis-sg",
            "name_prefix": "",
            "owner_id": "710271940761",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-069208791c9a4008e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "710271940761",
            "id": "sg-05513314ed0f4d722",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.compute.aws_security_group.alb_sg",
            "module.compute.aws_security_group.web_server_sg",
            "module.networking.aws_eip.nat_gateway_eip",
            "module.networking.aws_internet_gateway.starttech_igw",
            "module.networking.aws_nat_gateway.starttech_nat_gw",
            "module.networking.aws_route_table.private_route_table",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_route_table_association.private_subnet_1a_rt_association",
            "module.networking.aws_route_table_association.public_subnet_rt_association",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_vpc.starttech_vpc",
            "module.networking.data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:710271940761:security-group/sg-0fe8c9f869a844693",
            "description": "Allow HTTP from ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fe8c9f869a844693",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05d492151c41e00bb"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "web_server_sg",
            "name_prefix": "",
            "owner_id": "710271940761",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WebServer_SG"
            },
            "tags_all": {
              "Name": "WebServer_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-069208791c9a4008e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "710271940761",
            "id": "sg-0fe8c9f869a844693",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.compute.aws_security_group.alb_sg",
            "module.networking.aws_eip.nat_gateway_eip",
            "module.networking.aws_internet_gateway.starttech_igw",
            "module.networking.aws_nat_gateway.starttech_nat_gw",
            "module.networking.aws_route_table.private_route_table",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_route_table_association.private_subnet_1a_rt_association",
            "module.networking.aws_route_table_association.public_subnet_rt_association",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_vpc.starttech_vpc",
            "module.networking.data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03aa248871222b572",
            "arn": "arn:aws:ec2:eu-west-1:710271940761:elastic-ip/eipalloc-03aa248871222b572",
            "association_id": "eipassoc-0118c4004251f60ab",
            "domain": "vpc",
            "id": "eipalloc-03aa248871222b572",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0952bf3bc264f241a",
            "private_dns": "ip-10-0-1-80.eu-west-1.compute.internal",
            "private_ip": "10.0.1.80",
            "public_dns": "ec2-52-17-46-183.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.17.46.183",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-1",
            "tags": {
              "Name": "starttech-eip-for-nat"
            },
            "tags_all": {
              "Name": "starttech-eip-for-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.starttech_igw",
            "module.networking.aws_vpc.starttech_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "starttech_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:710271940761:internet-gateway/igw-079b49728cc5d5334",
            "id": "igw-079b49728cc5d5334",
            "owner_id": "710271940761",
            "region": "eu-west-1",
            "tags": {
              "Name": "starttech-internet-gateway"
            },
            "tags_all": {
              "Name": "starttech-internet-gateway"
            },
            "vpc_id": "vpc-069208791c9a4008e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.starttech_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "starttech_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03aa248871222b572",
            "association_id": "eipassoc-0118c4004251f60ab",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0bb92477320950e8e",
            "network_interface_id": "eni-0952bf3bc264f241a",
            "private_ip": "10.0.1.80",
            "public_ip": "52.17.46.183",
            "region": "eu-west-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a7960a5d923144f7",
            "tags": {
              "Name": "starttech-nat-gateway"
            },
            "tags_all": {
              "Name": "starttech-nat-gateway"
            },
            "vpc_id": "vpc-069208791c9a4008e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat_gateway_eip",
            "module.networking.aws_internet_gateway.starttech_igw",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.starttech_vpc",
            "module.networking.data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:710271940761:route-table/rtb-0eb474b23008b5511",
            "id": "rtb-0eb474b23008b5511",
            "owner_id": "710271940761",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bb92477320950e8e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "starttech-private-route-table"
            },
            "tags_all": {
              "Name": "starttech-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-069208791c9a4008e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "710271940761",
            "id": "rtb-0eb474b23008b5511",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_gateway_eip",
            "module.networking.aws_internet_gateway.starttech_igw",
            "module.networking.aws_nat_gateway.starttech_nat_gw",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.starttech_vpc",
            "module.networking.data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:710271940761:route-table/rtb-0b76934f38cdb623e",
            "id": "rtb-0b76934f38cdb623e",
            "owner_id": "710271940761",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-079b49728cc5d5334",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "starttech-public-route-table"
            },
            "tags_all": {
              "Name": "starttech-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-069208791c9a4008e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "710271940761",
            "id": "rtb-0b76934f38cdb623e",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.starttech_igw",
            "module.networking.aws_vpc.starttech_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1a_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04cac02e7397b592b",
            "region": "eu-west-1",
            "route_table_id": "rtb-0eb474b23008b5511",
            "subnet_id": "subnet-02a5ec998e47a1eec"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat_gateway_eip",
            "module.networking.aws_internet_gateway.starttech_igw",
            "module.networking.aws_nat_gateway.starttech_nat_gw",
            "module.networking.aws_route_table.private_route_table",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.starttech_vpc",
            "module.networking.data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015b849df42315396",
            "region": "eu-west-1",
            "route_table_id": "rtb-0b76934f38cdb623e",
            "subnet_id": "subnet-0a7960a5d923144f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.starttech_igw",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.starttech_vpc",
            "module.networking.data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:710271940761:subnet/subnet-02a5ec998e47a1eec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a5ec998e47a1eec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "710271940761",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "starttech-private-subnet"
            },
            "tags_all": {
              "Name": "starttech-private-subnet"
            },
            "vpc_id": "vpc-069208791c9a4008e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "710271940761",
            "id": "subnet-02a5ec998e47a1eec",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.starttech_vpc",
            "module.networking.data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:710271940761:subnet/subnet-0a7960a5d923144f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7960a5d923144f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "710271940761",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "starttech-public-subnet"
            },
            "tags_all": {
              "Name": "starttech-public-subnet"
            },
            "vpc_id": "vpc-069208791c9a4008e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "710271940761",
            "id": "subnet-0a7960a5d923144f7",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.starttech_vpc",
            "module.networking.data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:710271940761:subnet/subnet-0ab042643a033bfd6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab042643a033bfd6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "710271940761",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "starttech-public-subnet"
            },
            "tags_all": {
              "Name": "starttech-public-subnet"
            },
            "vpc_id": "vpc-069208791c9a4008e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "710271940761",
            "id": "subnet-0ab042643a033bfd6",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.starttech_vpc",
            "module.networking.data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "starttech_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:710271940761:vpc/vpc-069208791c9a4008e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0207b6b3d84869c02",
            "default_route_table_id": "rtb-02c200cc789c0aa12",
            "default_security_group_id": "sg-016c5b528c78fae23",
            "dhcp_options_id": "dopt-0e78250021c32a87a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-069208791c9a4008e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02c200cc789c0aa12",
            "owner_id": "710271940761",
            "region": "eu-west-1",
            "tags": {
              "Name": "starttech-vpc"
            },
            "tags_all": {
              "Name": "starttech-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "710271940761",
            "id": "vpc-069208791c9a4008e",
            "region": "eu-west-1"
          }
        }
      ]
    }
  ]
}